Use a reducer for text output, and use only one